--- a/css/framestyle.css
+++ b/css/framestyle.css
@@ -43,6 +43,7 @@
 	position: absolute;
 	width: 100%;
 	height: 100%;
+	left:0px;
 }
 
 .shadow-inside {
@@ -51,4 +52,5 @@
 	width: 100%;
 	height: 100%;
 	box-shadow: inset 0px 0px 15px 5px #AAA;
+	left:0px;
 }
