--- a/css/framestyle.css
+++ b/css/framestyle.css
@@ -54,3 +54,31 @@
 	box-shadow: inset 0px 0px 15px 5px #AAA;
 	left:0px;
 }
+
+.cover{
+	font-family: Helvetica;
+	font-size:400%;
+	color:#fff;
+	background-color: rgba(0,0,0,.5);
+	width:100%;
+	height:100%;
+	position: absolute;
+	left:0px;
+	text-align: center;
+	opacity: 0;
+	border-radius: 10px;
+	vertical-align: middle;
+}
+.cover:hover{
+	opacity: 1;
+	cursor: pointer;
+}
+
+.centeredtext {
+	position: absolute;
+  vertical-align: middle;
+  top:50%;
+  transform: translate(0%,-50%);
+  text-align: center;
+  width: 100%;
+}
