--- a/css/style.css
+++ b/css/style.css
@@ -103,3 +103,38 @@ cover:hover{
 a{
   text-decoration: none;
 }
+
+#fader {
+  position:absolute;
+  top:0px;
+  left:0px;
+  right:0px;
+  bottom:0px;
+  opacity:0;
+  display:none;
+}
+#screen {
+  position:absolute;
+  top:0px;
+  left:0px;
+  right:0px;
+  bottom:0px;
+  opacity:.8;
+  background-color:#333;
+}
+#viewer {
+  position:absolute;
+  top:50%;
+  left:50%;
+  width: auto;
+  height: auto;
+  transform: translate(-50%,-50%);
+  background-color:#fff;
+  border-radius:10px;
+  padding:10px;
+}
+#closer {
+  position:absolute;
+  right:5%;
+  top:10%;
+}
