--- a/css/framestyle.css
+++ b/css/framestyle.css
@@ -54,6 +54,14 @@
 	box-shadow: inset 0px 0px 15px 5px #AAA;
 	left:0px;
 }
+.darkshadow-inside {
+	border-radius: 10px;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	box-shadow: inset 0px 0px 15px 5px #000;
+	left:0px;
+}
 
 .cover{
 	font-family: Helvetica;
