--- a/css/framestyle.css
+++ b/css/framestyle.css
@@ -43,8 +43,10 @@
 
 .inside {
 	position: absolute;
-	width: 100%;
-	height: 100%;
+	width:auto;
+	height: auto;
+	max-width: 100%;
+	max-height: 100%;
 	left:0px;
 }
 
