--- a/css/framestyle.css
+++ b/css/framestyle.css
@@ -47,7 +47,9 @@
 	height: auto;
 	max-width: 100%;
 	max-height: 100%;
-	left:0px;
+	left:50%;
+	top:50%;
+	transform: translate(-50%,-50%);
 }
 
 .shadow-inside {
