--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,7 @@ a{
   padding:10px;
   max-height: 90%;
   max-width: 90%;
+  overflow: hidden;
 }
 #closer {
   position:absolute;
@@ -169,4 +170,11 @@ a{
   padding-left: 20px;
   padding-right: 20px;
   padding-top:20px;
+}
+
+.viewimg {
+  max-height: 100%;
+  max-width: 100%;
+  width: auto;
+  height: auto;
 }
