--- a/css/framestyle.css
+++ b/css/framestyle.css
@@ -1,18 +1,3 @@
-.shadow-box{
-	float:left;
-	position: relative;
-	width:40%;
-	box-shadow: inset 0px 0px 15px 5px #000;
-	border-radius:10px;
-	margin-left: 5%;
-}
-
-.shadow-box:after {
-  content: "";
-  display: grid;
-  padding-bottom: 100%;
-}
-
 .box{
 	margin-left: 5%;
 	float:left;
@@ -30,24 +15,21 @@
   padding-bottom: 100%;
 }
 
-.border-box{
-	position: relative;
-	width:27%;
-	height: 27%
-}
-
-.border-box:after {
-  content: "";
-  display: block;
-  padding-bottom: 100%;
-}
-
 .inside {
 	position: absolute;
 	width:auto;
 	height: auto;
-	max-width: 100%;
 	max-height: 100%;
+	left:50%;
+	top:50%;
+	transform: translate(-50%,-50%);
+}
+
+.nineinside {
+	position: absolute;
+	width:auto;
+	height: auto;
+	max-height: 90%;
 	left:50%;
 	top:50%;
 	transform: translate(-50%,-50%);
