--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,7 @@ a{
   max-height: 90%;
   max-width: 90%;
   overflow: hidden;
+  text-align: center;
 }
 #closer {
   position:absolute;
@@ -174,7 +175,10 @@ a{
 
 .viewimg {
   max-height: 100%;
-  max-width: 100%;
+  max-width: 90%;
   width: auto;
   height: auto;
+  display: inline;
+  align-self: center;
+  text-align: center;
 }
