--- a/css/framestyle.css
+++ b/css/framestyle.css
@@ -81,7 +81,12 @@
 #headtitle {
 	font-weight: bold;
 	font-size: 40px;
-	text-align: left;
 	margin-left: 5%;
 	margin-bottom: 5%;
+}
+
+.subby {
+	font-weight: bold;
+	text-align: left;
+	margin-left: 5%;
 }
